Fixed custom scrollbar SCSS

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,6 +1,7 @@
 @mixin view {
     width: 100%;
-    height: 100%;
+    min-height: calc(100% - 3rem);
+    margin-top: 3rem;
     background-color: $color-main-tint-03;
 }
 
@@ -10,17 +11,17 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: var(--color-gray-tint-03);
+        background: $color-gray-tint-04;
         border-radius: 5px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: var(--color-gray-tint-02);
+        background: $color-gray-tint-02;
         border-radius: 5px;
     }
 
     &::-webkit-scrollbar-thumb:hover {
-        background: var(--color-gray-tint-01);
+        background: $color-gray-tint-01;
     }
 }
 
